# gerador-musical

./: README.md  pyproject.toml
docs/: assumptions.md  assumptions_gui.md  integration_contract.md  testes_manuais_gui.md
docs/fase1/: arquitetura.md  arquitetura_gui.md  capturas_gui.md
docs/regras-git/: regras.md
src/: gui.py
src/music_generator/: __init__.py
src/music_generator/application/: __init__.py  initial_delay_parser.py  interpreter.py  playback_service.py  polyphonic_generator.py  polyphonic_rules.py  rules.py  sequence_generator.py  timeline_scheduler.py
src/music_generator/domain/: __init__.py  composition.py  events.py  polyphony.py  settings.py  state.py
src/music_generator/gui/: instrument_catalog.py  midi_export_service.py  playback_controller.py  text_file_service.py
src/music_generator/infrastructure/audio/: __init__.py  fluidsynth_player.py  player.py
src/music_generator/infrastructure/midi/: midi_exporter.py
tests/: conftest.py
tests/integration/: test_fluidsynth_player.py
tests/unit/: test_fluidsynth_polyphonic_player.py  test_gui.py  test_instrument_catalog.py  test_interpreter.py  test_midi_export_service.py  test_midi_exporter.py  test_playback_controller.py  test_playback_service.py  test_polyphonic_generator.py  test_polyphonic_playback_service.py  test_rules.py  test_sequence_generator.py  test_settings.py  test_state.py  test_text_file_service.py
